--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -9,6 +9,8 @@ env:
 
 jobs:
   release:
+    permissions: write-all
+
     name: release ${{ matrix.target }}
     runs-on: ubuntu-latest
     strategy:
