--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-name = "github-actions"
+name = "rust-launcher"
 version = "0.1.0"
 edition = "2021"
+
+[lib]
+name = "rust_launcher"
+src = "src/lib.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+create_process_w = { version = "0.1.2", package = "CreateProcessW" }
