--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,10 @@ src = "src/lib.rs"
 
 [dependencies]
 create_process_w = { version = "0.1.2", package = "CreateProcessW" }
+reqwest = { version = "0.11.14", features = ["blocking", "json"] }
+serde_json = "1.0.91"
+tokio = {version="1.24.2", features=["full"]}
+toml = "0.5.2"
+serde = "1.0.136"
+serde_derive = "1.0.136"
+zip = "0.6.3"
