--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ toml = "0.5.2"
 serde = "1.0.136"
 serde_derive = "1.0.136"
 zip = "0.6.3"
+const_format = "0.2.30"
+online = { version = "4.0.0", features = ["tokio"] }
+anyhow = "1.0.68"
