--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,8 @@ src = "src/lib.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reqwest = { version = "0.11.14", features = ["blocking", "json"] }
+reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
 serde_json = "1.0.91"
-tokio = {version="1.24.2", features=["full"]}
 toml = "0.5.2"
 serde = "1.0.136"
 serde_derive = "1.0.136"
